<resources>
    <string name="app_name">Responsi Fintech</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password_click">Forgot Password? Click </string>
    <string name="here"> here</string>
    <string name="haven_t_account_register">Haven\'t Account? Register </string>
    <string name="password">Password</string>
    <string name="nim">NIM</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>